<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/activity_display_options"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.example.absolute.DisplayOptionsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/display_options_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_options_toolbar"
        android:id="@+id/rgValueDelay">

        <RadioButton
            android:text="@string/displaySpeedQuick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbQuick"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/displaySpeedNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbNormal"
            android:layout_weight="1"
            android:checked="true" />

        <RadioButton
            android:text="@string/displaySpeedSlow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbSlow"
            android:layout_weight="1" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rgExecuteSteps">

        <CheckBox
            android:text="@string/executeOneStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbExecuteOneStep"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <CheckBox
                android:text="@string/executeNumberStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbExecuteNumberStep"
                android:layout_weight="1" />

            <EditText
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="10"
                android:ems="10"
                android:id="@+id/etNumberSteps" />

            <TextView
                android:text="@string/ofSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="1" />
        </LinearLayout>

    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSelect"
            android:layout_gravity="bottom|left" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_gravity="bottom|right" />
    </FrameLayout>

</LinearLayout>
