<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/experimentName"
        android:layout_gravity="center_horizontal"
        android:text="@string/nameNewTab" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_taskType_radioGroup">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/unlimited_task_radioButton"
            android:text="@string/titleRadioButtonUnlimitedTask"
            android:checked="true"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/limited_task_radioButton"
            android:text="@string/titleRadioButtonLimitedTask"
            android:checked="false"/>
    </RadioGroup>
</LinearLayout>